# pinn-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/: adaptive_collocation.py  burgers.py  common.py  crank_nicolson.py  hard_bc.py  heat.py  optimizer_study.py  spectral_bias.py
logs/: adaptive_collocation.csv  burgers_shock.csv  burgers_training.csv  crank_nicolson.csv  hard_bc.csv  heat_collocation.csv  heat_training.csv  heat_width.csv  optimizer_adam.csv  optimizer_hybrid.csv  optimizer_lbfgs.csv  spectral_long.csv  spectral_pinn.csv  spectral_regression.csv
pinn/: __init__.py  derivatives.py  features.py  losses.py  model.py
tests/: test_burgers.py  test_crank_nicolson.py  test_derivatives.py  test_features.py  test_hard_bc.py  test_heat.py  test_losses.py  test_model.py  test_optimizer_study.py  test_spectral_bias.py
theory/: derivations.md
