[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-from-scratch"
version = "0.1.0"
description = "Physics-informed neural networks from the derivatives up -- exact autograd PDE residuals, in PyTorch, every problem checked against a closed-form or independently computed ground truth"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["torch>=2.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["pinn*"]
